--- a/admin/add-artwork.html
+++ b/admin/add-artwork.html
@@ -1,68 +1,33 @@
+<!-- admin/add-artwork.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Artwork - Admin Panel</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <title>Add Artwork</title>
 </head>
-<body class="bg-gray-100">
-
-    <!-- Navbar -->
-    <nav class="bg-purple-600 p-4 text-white">
-        <div class="container mx-auto">
-            <h1 class="text-3xl font-bold">Add New Artwork</h1>
+<body>
+    <h1>Add Artwork</h1>
+    <form action="/admin/add-artwork" method="POST" enctype="multipart/form-data">
+        <div>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required>
         </div>
-    </nav>
-
-    <!-- Add Artwork Form -->
-    <div class="container mx-auto mt-10">
-        <form id="artworkForm" class="bg-white p-6 rounded-lg shadow-md">
-            <label for="title" class="block text-lg font-semibold">Title</label>
-            <input type="text" id="title" name="title" required class="mt-2 p-2 w-full border rounded-md">
-            
-            <label for="description" class="block text-lg font-semibold mt-4">Description</label>
-            <textarea id="description" name="description" required class="mt-2 p-2 w-full border rounded-md"></textarea>
-
-            <label for="tags" class="block text-lg font-semibold mt-4">Tags (comma separated)</label>
-            <input type="text" id="tags" name="tags" class="mt-2 p-2 w-full border rounded-md">
-            
-            <button type="submit" class="mt-6 bg-purple-600 text-white px-6 py-3 rounded-full shadow hover:bg-purple-700">Add Artwork</button>
-        </form>
-    </div>
-
-    <script>
-        // Handle form submission to add new artwork
-        document.getElementById('artworkForm').addEventListener('submit', async function (event) {
-            event.preventDefault();
-
-            const title = document.getElementById('title').value;
-            const description = document.getElementById('description').value;
-            const tags = document.getElementById('tags').value.split(',');
-
-            const artwork = { title, description, tags };
-
-            try {
-                const response = await fetch('https://lirinart-server.vercel.app/artworks', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(artwork),
-                });
-
-                if (response.ok) {
-                    alert('Artwork added successfully!');
-                    window.location.href = 'dashboard.html';
-                } else {
-                    alert('Error adding artwork');
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('Error adding artwork');
-            }
-        });
-    </script>
-
+        <div>
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" required></textarea>
+        </div>
+        <div>
+            <label for="tags">Tags (comma separated):</label>
+            <input type="text" id="tags" name="tags">
+        </div>
+        <div>
+            <label for="image">Upload Image:</label>
+            <input type="file" id="image" name="image" accept="image/*" required>
+        </div>
+        <div>
+            <button type="submit">Add Artwork</button>
+        </div>
+    </form>
 </body>
 </html>
