--- a/admin/manage-artworks.html
+++ b/admin/manage-artworks.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Artworks</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link rel="stylesheet" href="/admin/admin.css">
 </head>
 <body>
     <h1>Manage Artworks</h1>
