--- a/admin/manage-artworks.html
+++ b/admin/manage-artworks.html
@@ -37,7 +37,7 @@
                         <td>${artwork.title}</td>
                         <td>${artwork.description}</td>
                         <td>${artwork.tags.join(', ')}</td>
-                        <td><img src="/uploads/${artwork.image}" alt="${artwork.title}" width="100"></td>
+                        <td><img src="/gallery/${artwork.image}" alt="${artwork.title}" width="100"></td>
                         <td>
                             <button>Edit</button>
                             <button>Delete</button>
