corrected the delete function

--- a/admin/manage-artworks.html
+++ b/admin/manage-artworks.html
@@ -57,7 +57,7 @@
 
         // Function to delete artwork
         function deleteArtwork(id) {
-            fetch(/admin/delete-artwork/${id}, {
+            fetch('/admin/delete-artwork/${id}', {
                 method: 'DELETE'
             })
             .then(response => {
