--- a/admin/manage-artworks.html
+++ b/admin/manage-artworks.html
@@ -56,20 +56,20 @@
         }
 
         // Function to delete artwork
-        function deleteArtwork(id) {
-            fetch('/admin/delete-artwork/${id}', {
-                method: 'DELETE'
-            })
-            .then(response => {
-                if (response.ok) {
-                    alert('Artwork deleted!');
-                    window.location.reload();  // Reload the page to update the table
-                } else {
-                    alert('Error deleting artwork');
-                }
-            })
-            .catch(err => console.error('Error deleting artwork:', err));
-        }
+    function deleteArtwork(id) {
+        fetch(`/admin/delete-artwork/${id}`, {  // Use backticks for template literal
+            method: 'DELETE'
+        })
+        .then(response => {
+            if (response.ok) {
+                alert('Artwork deleted!');
+                window.location.reload();  // Reload the page to update the table
+            } else {
+                alert('Error deleting artwork');
+            }
+        })
+        .catch(err => console.error('Error deleting artwork:', err));
+    }
     </script>
 </body>
 </html>
